# botscan

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test-file.py
botscan/: __init__.py  cli.py  linter.py  rpa_checker.py
custom_checks/: rpa_checker.py
