[tool.pylint]
load-plugins = ["botscan"]

[project]
name = "botscan"
version = "0.1.0"
description = "Linter and formatting for RPA automations with Python"
authors = [
    { name = "Ruan Machado", email = "whiterun092@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "black>=24.3.0",
    "pylint>=3.1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "--tb=short -q"
testpaths = ["tests"]